--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~0.1.12",
+	"grunt-browserify": "~2.1.3",
     "jshint-stylish": "~0.1.3",
     "karma-chrome-launcher": "^0.1.4",
     "karma-firefox-launcher": "^0.1.3",
