--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,10 @@
   "name": "moemap3",
   "version": "0.0.0",
   "dependencies": {
+    "jquery": "~1.11.0",
+    "underscore": "~1.6.0",
+    "yepnope": "~1.5.0",
+    "jquery.ui": "~1.8.17",  
     "ember": "1.5.0",
     "handlebars": "1.2.1",
     "ember-data": "1.0.0-beta.7",
