--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "karma-mocha": "~0.1.3",
     "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "~0.1.0",
-    "time-grunt": "~0.1.1"
+    "time-grunt": "~0.1.1",
+    "underscore": "^1.7.0"
   },
   "engines": {
     "node": ">=0.8.0"
